@@ -1,3 +1,14 @@
+2007-07-16  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/simd.s: Add tests for punpcklbw, punpckldq,
+	punpcklwd and punpcklqdq.
+	* gas/i386/x86-64-simd.s: Likewise.
+
+	* gas/i386/simd-intel.d: Updated.
+	* gas/i386/simd.d: Likewise.
+	* gas/i386/x86-64-simd-intel.d: Likewise.
+	* gas/i386/x86-64-simd.d: Likewise.
+
 2007-07-14  Nick Clifton  <nickc@redhat.com>
 
 	* gas/arm/arm.s: Add tests for re-aliasing a previously removed
